# RAG-app

./: Dockerfile  docker-compose.yaml  pyproject.toml  学習メモ.md
api/: main.py
api/routers/: done.py  task.py
api/schemas/: task.py
db/chroma/: chroma_v0_250218.sqlite3
langchain-nextjs-template/: .env.example  package-lock.json
langchain-nextjs-template/app/: page.tsx
langchain-nextjs-template/app/api/chat/: route.ts
langchain-nextjs-template/components/: ChatWindow.tsx
