[project]
name = "rag-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "openai (>=1.63.2,<2.0.0)",
    "langchain-community==0.3.0",
    "langchain-openai==0.2.0",
    "langchain-core==0.3.0",
    "langchain-text-splitters==0.3.0",
    "langchain-chroma==0.1.4"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
